// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Symbol /> from .bob file > matches snapshot (using fallback symbol) 1`] = `
<DocumentFragment>
  <div
    style="background-color: transparent; overflow: visible; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="https://cs-web-symbol.diamond.ac.uk/catalogue/default_symbol.png"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file > matches snapshot (with index) 1`] = `
<DocumentFragment>
  <div
    style="background-color: transparent; overflow: visible; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 3.svg"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file > matches snapshot (with rotation) 1`] = `
<DocumentFragment>
  <div
    style="background-color: transparent; overflow: visible; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(45deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file > matches snapshot (without index) 1`] = `
<DocumentFragment>
  <div
    style="background-color: transparent; overflow: visible; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .opi file > matches snapshot (with rotation) 1`] = `
<DocumentFragment>
  <div
    style="background-color: transparent; overflow: visible; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(45deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .opi file > matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="background-color: transparent; overflow: visible; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left;"
    />
  </div>
  <div
    class="_SymbolLabel_7b7af1"
    style="background-color: transparent; align-items: center; justify-content: center;"
  >
    <div
      style="padding: 5%;"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-s3bsr1-MuiTypography-root"
      >
        Fake value
      </p>
    </div>
  </div>
</DocumentFragment>
`;
